syntax = "proto3";

package telemetry;

message TelemetryPacket {
  int32 source_id = 1;
  int32 wind_speed = 2;
  int32 wind_mode = 3;
  int32 wind_direction = 4;
  double latitude = 5;
  double longitude = 6;
  int32 imu_sensitivity = 7;
}
